<resources>
    <string name="app_name">H&amp;S Microfinance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banktransfer">Bank Transfer</string>
    <string name="itemloading">Loading</string>
    <string name="premium">Premium</string>
    <string name="term_condion_4">4.) National Identification Card (Front and Back)</string>
    <string name="term_condion_3">3.) Passport (Biometric Page)</string>
    <string name="term_condition_2">2.) Social Security Number (For US Citizens)</string>
    <string name="term_condition_1">1.) KRA PIN (Kenyan Citizens)</string>
    <string name="government_id">The Government ID Cards acceptable are</string>
    <string name="Term_and_conditions">Terms and Conditions</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="disclaimer_1">1.) The form of Government ID attached is subject to verification.</string>
    <string name="disclaimer_2">2.) Additional proof of identification may be requested to maintain your account privileges at anytime.</string>
    <string name="disclaimer_3">3.) HS Group Microfinance may suspend the privileges of your account during the verification process.</string>
    <string name="gold">Gold</string>
    <string name="basic">Basic</string>
    <string name="select_your_package">Select your package</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="investheader"><![CDATA[Invest with Us]]></string>
    <string name="standard">Standard</string>
    <string name="limit_ksh_500_ksh_20000">Limit: Ksh 500 - 20 000</string>
    <string name="duration_30_days">Duration: 30 Days</string>
    <string name="return_5">Return: 5%</string>
    <string name="deposit_now">Deposit Now</string>
    <string name="limit_ksh_10000_ksh_100000">Limit: Ksh 10 000 - 100 000</string>
    <string name="duration_210_days">Duration: 210 Days</string>
    <string name="return_7">Return: 7%</string>
    <string name="platinum">Platinum</string>
    <string name="limit_ksh_20000_ksh_250000">Limit: Ksh 20 000 - 250 000</string>
    <string name="duration_540_days">Duration: 540 Days</string>
    <string name="return_10">Return: 10%</string>
    <string name="message">Message</string>
    <string-array name="currency_type">
        <item>Kenya Shillings</item>
    </string-array>
    <string-array name="verification">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

    <!--Bills Payments-->
    <string name="action_airtime">Airtime</string>
    <string name="action_power">Power</string>
    <string name="action_water">Water</string>
    <string name="action_tv">Pay TV</string>
    <string name="action_add_bill">Add a new Bill</string>
    <string name="action_buy_airtime">But airtime</string>
    <string name="action_enter_phone">Enter Phone Number</string>
    <string name="action_phone_number">Phone Number</string>
    <string name="action_own_number">My Number</string>
    <string name="action_other_number">Other Number</string>
    <string name="action_amount">Amount</string>
    <string name="action_enter_amount">Enter Amount</string>
    <string name="action_select_provider">Select network provider</string>
    <string name="action_title">Zuku</string>
    <string name="action_account_number">Enter Account Number</string>
    <string name="action_account_number_user">Account Number</string>
    <string name="action_get_bill">Get Bill</string>
    <string name="action_app_bill">Pay Bill</string>
    <string name="action_due_date">Due Date</string>
    <string name="action_bill_found">Bill Found</string>
    <string name="action_account_name">Account Name</string>
    <string name="approve">"Okay "</string>
    <string name="cancel">Cancel</string>
    <string name="we_working">We are working hard to ensure it is available soon</string>
    <string name="success_caps">Service not Available</string>
    <string name="smart_card">Enter SmartCard Number</string>
    <string name="action_confirm_bill">Confirm Details</string>
    <string name="login_name_hint">Name</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bills">My Bills</string>
    <string name="login_phone_hint">Phone Number</string>
    <string name="title_profile">Account</string>
    <string name="action_view_all">View All</string>
    <string name="action_select_contact">Select Contact</string>
    <string name="action_pay_bill">Pay Bill</string>
    <string name="action_minimum_amount">Minimum airtime amount is KES. 5</string>
    <string name="action_welcome_to_app"><![CDATA[Welcome to H&S GROUP]]></string>
    <string name="action_login">Login</string>
    <string name="action_stripe_bill">Card Payments</string>
    <string name="action_submit">Submit</string>
    <string name="action_enter_pin">Enter your PIN</string>
    <string name="action_forgot_pin">Forgot Pin?</string>


</resources>